--- a/.github/workflows/02-qa-base.yml
+++ b/.github/workflows/02-qa-base.yml
@@ -36,46 +36,87 @@ jobs:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   # ───────────────────────────────────────────────────────────
-  # Job 2: Capturar información de la imagen de QA
+  # Job 2: Obtener información de la imagen creada en Feature
   # ───────────────────────────────────────────────────────────
   get-image-info:
-    name: 📦 Get QA Image Information
+    name: 📦 Get Latest QA Image from GCP
     runs-on: ubuntu-latest
     needs: test
     outputs:
-      docker_image: ${{ steps.image-info.outputs.docker_image }}
-      gcp_project_id: ${{ steps.image-info.outputs.gcp_project_id }}
-      gcp_region: ${{ steps.image-info.outputs.gcp_region }}
-      artifact_registry: ${{ steps.image-info.outputs.artifact_registry }}
-      tag_qa: ${{ steps.image-info.outputs.tag_qa }}
-      full_image_url: ${{ steps.image-info.outputs.full_image_url }}
+      docker_image: ${{ steps.get-latest-image.outputs.docker_image }}
+      gcp_project_id: ${{ steps.get-latest-image.outputs.gcp_project_id }}
+      gcp_region: ${{ steps.get-latest-image.outputs.gcp_region }}
+      artifact_registry: ${{ steps.get-latest-image.outputs.artifact_registry }}
+      tag_qa: ${{ steps.get-latest-image.outputs.tag_qa }}
+      full_image_url: ${{ steps.get-latest-image.outputs.full_image_url }}
     
     steps:
-      - name: 📊 Extract and set image information
-        id: image-info
+      - name: 🔐 Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: ☁️ Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: elite-ceremony-476307-s9
+
+      - name: 🔍 Get latest image from Artifact Registry
+        id: get-latest-image
         run: |
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
-          echo "📦 CAPTURING QA IMAGE INFORMATION"
+          echo "📦 FETCHING LATEST QA IMAGE FROM GCP ARTIFACT REGISTRY"
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
           
-          # Información de la imagen (debe coincidir con tu configuración de build)
+          # Configuración (debe coincidir con 01-feature-base.yml)
           DOCKER_IMAGE="mi-aplicacion"
           GCP_PROJECT_ID="elite-ceremony-476307-s9"
           GCP_REGION="us-central1"
           ARTIFACT_REGISTRY="dariasmoises979"
           
-          # Generar tag basado en el commit SHA (formato común)
-          TAG_QA="qa-${{ github.sha }}"
+          echo "🔍 Searching for image: ${DOCKER_IMAGE}"
+          echo "📍 Registry: ${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${ARTIFACT_REGISTRY}"
+          echo ""
           
-          # Construir URL completa de la imagen
-          FULL_IMAGE_URL="${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${ARTIFACT_REGISTRY}/${DOCKER_IMAGE}:${TAG_QA}"
+          # Obtener el tag más reciente de la imagen para QA
+          # Buscar tags que contengan 'qa-' o el patrón que uses en feature
+          LATEST_TAG=$(gcloud artifacts docker tags list \
+            ${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${ARTIFACT_REGISTRY}/${DOCKER_IMAGE} \
+            --format="value(tag)" \
+            --sort-by="~UPDATE_TIME" \
+            --limit=1 \
+            --filter="tag:qa-*" 2>/dev/null || echo "")
           
-          echo "🐳 Docker Image: ${DOCKER_IMAGE}"
-          echo "☁️  GCP Project: ${GCP_PROJECT_ID}"
-          echo "📍 GCP Region: ${GCP_REGION}"
-          echo "📦 Artifact Registry: ${ARTIFACT_REGISTRY}"
-          echo "🏷️  Tag QA: ${TAG_QA}"
-          echo "🔗 Full Image URL: ${FULL_IMAGE_URL}"
+          # Si no encuentra con filtro qa-, buscar el más reciente sin filtro
+          if [ -z "${LATEST_TAG}" ]; then
+            echo "⚠️  No QA-specific tag found, getting latest tag..."
+            LATEST_TAG=$(gcloud artifacts docker tags list \
+              ${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${ARTIFACT_REGISTRY}/${DOCKER_IMAGE} \
+              --format="value(tag)" \
+              --sort-by="~UPDATE_TIME" \
+              --limit=1 2>/dev/null || echo "")
+          fi
+          
+          if [ -z "${LATEST_TAG}" ]; then
+            echo "❌ ERROR: No image found in Artifact Registry"
+            echo "   Make sure the image was built in the feature workflow"
+            exit 1
+          fi
+          
+          # Construir URL completa
+          FULL_IMAGE_URL="${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${ARTIFACT_REGISTRY}/${DOCKER_IMAGE}:${LATEST_TAG}"
+          
+          echo "✅ Latest image found:"
+          echo "   🐳 Image: ${DOCKER_IMAGE}"
+          echo "   🏷️  Tag: ${LATEST_TAG}"
+          echo "   🔗 Full URL: ${FULL_IMAGE_URL}"
+          echo ""
+          
+          # Obtener información adicional de la imagen
+          echo "📊 Image details:"
+          gcloud artifacts docker images describe ${FULL_IMAGE_URL} \
+            --format="table(image_summary.fully_qualified_digest, image_summary.upload_time)" 2>/dev/null || echo "   (details not available)"
+          
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
           
           # Exportar como outputs
@@ -83,7 +124,7 @@ jobs:
           echo "gcp_project_id=${GCP_PROJECT_ID}" >> $GITHUB_OUTPUT
           echo "gcp_region=${GCP_REGION}" >> $GITHUB_OUTPUT
           echo "artifact_registry=${ARTIFACT_REGISTRY}" >> $GITHUB_OUTPUT
-          echo "tag_qa=${TAG_QA}" >> $GITHUB_OUTPUT
+          echo "tag_qa=${LATEST_TAG}" >> $GITHUB_OUTPUT
           echo "full_image_url=${FULL_IMAGE_URL}" >> $GITHUB_OUTPUT
 
   # ───────────────────────────────────────────────────────────
