--- a/.github/workflows/02-qa-base.yml
+++ b/.github/workflows/02-qa-base.yml
@@ -39,7 +39,7 @@ jobs:
   # Job 2: Obtener información de la imagen creada en Feature
   # ───────────────────────────────────────────────────────────
   get-image-info:
-    name: 📦 Get Latest QA Image from GCP
+    name: 📦 Get Feature Image from GCP
     runs-on: ubuntu-latest
     needs: test
     outputs:
@@ -49,6 +49,8 @@ jobs:
       artifact_registry: ${{ steps.get-latest-image.outputs.artifact_registry }}
       tag_qa: ${{ steps.get-latest-image.outputs.tag_qa }}
       full_image_url: ${{ steps.get-latest-image.outputs.full_image_url }}
+      feature_commit: ${{ steps.get-feature-commit.outputs.feature_commit }}
+      feature_commit_short: ${{ steps.get-feature-commit.outputs.feature_commit_short }}
     
     steps:
       - name: 🔐 Authenticate to Google Cloud
@@ -61,11 +63,57 @@ jobs:
         with:
           project_id: elite-ceremony-476307-s9
 
-      - name: 🔍 Get latest image from Artifact Registry
+      - name: 📦 Checkout QA branch
+        uses: actions/checkout@v4
+        with:
+          ref: qa
+          fetch-depth: 0
+
+      - name: 🔍 Get feature commit SHA from merge
+        id: get-feature-commit
+        run: |
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "🔍 EXTRACTING FEATURE COMMIT FROM MERGE"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          
+          # Obtener el último commit de la rama QA
+          CURRENT_COMMIT=$(git rev-parse HEAD)
+          echo "📌 Current QA commit: ${CURRENT_COMMIT}"
+          
+          # Obtener el mensaje del último commit
+          COMMIT_MESSAGE=$(git log -1 --pretty=%B)
+          echo "📝 Commit message: ${COMMIT_MESSAGE}"
+          
+          # Si es un merge commit, obtener el commit padre de la feature
+          if git rev-parse HEAD^2 &>/dev/null; then
+            # Es un merge commit, el segundo padre es el commit de feature
+            FEATURE_COMMIT=$(git rev-parse HEAD^2)
+            echo "✅ Merge commit detected"
+            echo "🎯 Feature commit (parent 2): ${FEATURE_COMMIT}"
+          else
+            # No es un merge commit, usar el commit actual
+            FEATURE_COMMIT=${CURRENT_COMMIT}
+            echo "⚠️  Not a merge commit, using current commit"
+            echo "🎯 Feature commit: ${FEATURE_COMMIT}"
+          fi
+          
+          # Obtener SHA corto para el tag (primeros 7 caracteres)
+          FEATURE_COMMIT_SHORT=${FEATURE_COMMIT:0:7}
+          
+          echo ""
+          echo "📊 Summary:"
+          echo "   Full SHA: ${FEATURE_COMMIT}"
+          echo "   Short SHA: ${FEATURE_COMMIT_SHORT}"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          
+          echo "feature_commit=${FEATURE_COMMIT}" >> $GITHUB_OUTPUT
+          echo "feature_commit_short=${FEATURE_COMMIT_SHORT}" >> $GITHUB_OUTPUT
+
+      - name: 🔍 Get image info from Artifact Registry
         id: get-latest-image
         run: |
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
-          echo "📦 FETCHING LATEST QA IMAGE FROM GCP ARTIFACT REGISTRY"
+          echo "📦 FETCHING IMAGE FROM GCP ARTIFACT REGISTRY"
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
           
           # Configuración (debe coincidir con 01-feature-base.yml)
@@ -74,41 +122,58 @@ jobs:
           GCP_REGION="us-central1"
           ARTIFACT_REGISTRY="dariasmoises979"
           
+          # Obtener el commit SHA de feature
+          FEATURE_COMMIT_SHORT="${{ steps.get-feature-commit.outputs.feature_commit_short }}"
+          
           echo "🔍 Searching for image: ${DOCKER_IMAGE}"
           echo "📍 Registry: ${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${ARTIFACT_REGISTRY}"
+          echo "🎯 Looking for tag with commit: ${FEATURE_COMMIT_SHORT}"
           echo ""
           
-          # Obtener el tag más reciente de la imagen para QA
-          # Buscar tags que contengan 'qa-' o el patrón que uses en feature
-          LATEST_TAG=$(gcloud artifacts docker tags list \
+          # Buscar la imagen con el tag que contiene el commit SHA
+          # El tag debe seguir el patrón usado en 01-feature-base.yml
+          # Ejemplo: qa-abc1234 o qa-environment-abc1234
+          IMAGE_TAG=$(gcloud artifacts docker tags list \
             ${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${ARTIFACT_REGISTRY}/${DOCKER_IMAGE} \
             --format="value(tag)" \
-            --sort-by="~UPDATE_TIME" \
-            --limit=1 \
-            --filter="tag:qa-*" 2>/dev/null || echo "")
+            --filter="tag~${FEATURE_COMMIT_SHORT}" \
+            --limit=1 2>/dev/null || echo "")
           
-          # Si no encuentra con filtro qa-, buscar el más reciente sin filtro
-          if [ -z "${LATEST_TAG}" ]; then
-            echo "⚠️  No QA-specific tag found, getting latest tag..."
-            LATEST_TAG=$(gcloud artifacts docker tags list \
+          # Si no encuentra por commit SHA, buscar por patrón qa-
+          if [ -z "${IMAGE_TAG}" ]; then
+            echo "⚠️  No image found with commit SHA, searching for latest qa- tag..."
+            IMAGE_TAG=$(gcloud artifacts docker tags list \
+              ${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${ARTIFACT_REGISTRY}/${DOCKER_IMAGE} \
+              --format="value(tag)" \
+              --sort-by="~UPDATE_TIME" \
+              --filter="tag:qa-*" \
+              --limit=1 2>/dev/null || echo "")
+          fi
+          
+          # Si aún no encuentra, buscar la más reciente
+          if [ -z "${IMAGE_TAG}" ]; then
+            echo "⚠️  No qa- tag found, getting latest tag..."
+            IMAGE_TAG=$(gcloud artifacts docker tags list \
               ${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${ARTIFACT_REGISTRY}/${DOCKER_IMAGE} \
               --format="value(tag)" \
               --sort-by="~UPDATE_TIME" \
               --limit=1 2>/dev/null || echo "")
           fi
           
-          if [ -z "${LATEST_TAG}" ]; then
+          if [ -z "${IMAGE_TAG}" ]; then
             echo "❌ ERROR: No image found in Artifact Registry"
             echo "   Make sure the image was built in the feature workflow"
+            echo "   Expected image: ${DOCKER_IMAGE}"
+            echo "   Expected registry: ${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${ARTIFACT_REGISTRY}"
             exit 1
           fi
           
           # Construir URL completa
-          FULL_IMAGE_URL="${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${ARTIFACT_REGISTRY}/${DOCKER_IMAGE}:${LATEST_TAG}"
+          FULL_IMAGE_URL="${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${ARTIFACT_REGISTRY}/${DOCKER_IMAGE}:${IMAGE_TAG}"
           
-          echo "✅ Latest image found:"
+          echo "✅ Image found:"
           echo "   🐳 Image: ${DOCKER_IMAGE}"
-          echo "   🏷️  Tag: ${LATEST_TAG}"
+          echo "   🏷️  Tag: ${IMAGE_TAG}"
           echo "   🔗 Full URL: ${FULL_IMAGE_URL}"
           echo ""
           
@@ -124,7 +189,7 @@ jobs:
           echo "gcp_project_id=${GCP_PROJECT_ID}" >> $GITHUB_OUTPUT
           echo "gcp_region=${GCP_REGION}" >> $GITHUB_OUTPUT
           echo "artifact_registry=${ARTIFACT_REGISTRY}" >> $GITHUB_OUTPUT
-          echo "tag_qa=${LATEST_TAG}" >> $GITHUB_OUTPUT
+          echo "tag_qa=${IMAGE_TAG}" >> $GITHUB_OUTPUT
           echo "full_image_url=${FULL_IMAGE_URL}" >> $GITHUB_OUTPUT
 
   # ───────────────────────────────────────────────────────────
